--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.3.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
